<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/main_bottom_sheet"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/main_elevation"
            app:contentPadding="10dp">
            <LinearLayout
                android:id="@+id/settingContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_layout"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGrey"
                    android:layout_marginTop="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/settingList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:icon="@drawable/ic_view_list"
                        app:strokeColor="@color/colorPrimary"
                        app:iconTint="@color/colorPrimary"
                        android:textColor="@color/colorPrimary"
                        android:text="List"
                        android:textAllCaps="false"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/settingGrid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        app:icon="@drawable/ic_view_module"
                        app:strokeColor="@color/colorGrey"
                        app:iconTint="@color/colorGrey"
                        android:textColor="@color/colorGrey"
                        android:text="Grid"
                        android:textAllCaps="false"
                        android:layout_marginLeft="10dp"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/main_elevation"
            app:contentPadding="10dp">
            <LinearLayout
                android:id="@+id/sortingContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sorting"
                    android:textStyle="bold"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGrey"
                    android:layout_marginTop="5dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/sortNewest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:useMaterialThemeColors="true"
                            android:checked="true"
                            android:text="@string/newest"/>
                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/sortOlder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:useMaterialThemeColors="true"
                            android:text="@string/older"/>
                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/sortMostViewed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:useMaterialThemeColors="true"
                            android:text="@string/most_viewed"/>
                        <com.google.android.material.radiobutton.MaterialRadioButton
                            android:id="@+id/sortFewestViews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:useMaterialThemeColors="true"
                            android:text="@string/fewest_views"/>
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>